// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Swiper /> should render a <Swiper> component with several pages 1`] = `
<Swiper>
  <styled.div
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-htpNat jLPIAx"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <styled.div>
        <div
          className="sc-gzVnrw ehJJBp"
        >
          <InteractiveSurface
            onChange={[Function]}
            opaque={true}
          >
            <styled.div
              onClickCapture={[Function]}
              onMouseDownCapture={[Function]}
              onTouchStartCapture={[Function]}
            >
              <div
                className="sc-bdVaJa jAMQad"
                onClickCapture={[Function]}
                onMouseDownCapture={[Function]}
                onTouchStartCapture={[Function]}
              >
                <styled.div
                  innerRef={[Function]}
                  selectedIndex={0}
                >
                  <div
                    className="sc-bZQynM hKcHjN"
                  >
                    <styled.div
                      key="item-0"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          First page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-1"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          Second page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-2"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          Third page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-3"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          Final page.
                        </div>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </InteractiveSurface>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bxivhb bcNCsA"
        >
          <styled.div
            active={true}
            index={0}
            key="bullet-0"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX bMqJke"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={1}
            key="bullet-1"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX jdKdjT"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={2}
            key="bullet-2"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX jdKdjT"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={3}
            key="bullet-3"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX jdKdjT"
              onClick={[Function]}
            />
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Swiper>
`;

exports[`<Swiper /> should render a <Swiper> component with several pages in and selectedIndex 1`] = `
<Swiper
  selectedIndex={1}
>
  <styled.div
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="sc-htpNat jLPIAx"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <styled.div>
        <div
          className="sc-gzVnrw ehJJBp"
        >
          <InteractiveSurface
            onChange={[Function]}
            opaque={true}
          >
            <styled.div
              onClickCapture={[Function]}
              onMouseDownCapture={[Function]}
              onTouchStartCapture={[Function]}
            >
              <div
                className="sc-bdVaJa jAMQad"
                onClickCapture={[Function]}
                onMouseDownCapture={[Function]}
                onTouchStartCapture={[Function]}
              >
                <styled.div
                  innerRef={[Function]}
                  selectedIndex={1}
                >
                  <div
                    className="sc-bZQynM cbSLgC"
                  >
                    <styled.div
                      key="item-0"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          First page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-1"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          Second page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-2"
                    >
                      <div
                        className="sc-EHOje cfvcOl"
                      >
                        <div>
                          Final page.
                        </div>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </InteractiveSurface>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bxivhb bcNCsA"
        >
          <styled.div
            active={false}
            index={0}
            key="bullet-0"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX jdKdjT"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={true}
            index={1}
            key="bullet-1"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX bMqJke"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={2}
            key="bullet-2"
            onClick={[Function]}
          >
            <div
              className="sc-ifAKCX jdKdjT"
              onClick={[Function]}
            />
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Swiper>
`;
